--- a/day01/exercises/MXM.ipynb
+++ b/day01/exercises/MXM.ipynb
@@ -68,7 +68,7 @@
     "plt.plot(x, y,  label='Data')\n",
     "plt.xlabel('Block size')\n",
     "plt.ylabel('Bandwich')\n",
-    "plt.title('MXM  block version \\n Bandwich changed by the change in the nuber of blocks ')\n",
+    "plt.title('MXM  block version \\n Bandwich changed by the change in the number of blocks ')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
