--- a/day02/lessons/01_introduction_to_oop/main.ipynb
+++ b/day02/lessons/01_introduction_to_oop/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4f2054b3",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2c575022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "class persone :\n",
+    "    def age(self, years_bored) :\n",
+    "        return(2023-years_bored)\n",
+    "hanan = persone()\n",
+    "hanan.nom = \"hanan\"\n",
+    "hanan.years_bored = 2002\n",
+    "print(hanan.age(hanan.years_bored))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "423afc65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hanan'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hanan.nom\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf56ec5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -55,7 +101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
