--- a/day02/lessons/02_Constructor/main.ipynb
+++ b/day02/lessons/02_Constructor/main.ipynb
@@ -39,8 +39,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "217a324e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "oulhaj\n"
+     ]
+    }
+   ],
+   "source": [
+    "class persone :\n",
+    "    def __init__(self, ferstname: str, lastname: str, year =1973):\n",
+    "            assert year > 1980, \"is not correct\"\n",
+    "            self.ferstname = ferstname\n",
+    "            self.lastname = lastname\n",
+    "            self.year = year\n",
+    "        \n",
+    "    def age(self) :\n",
+    "        return(2023- self.year)\n",
+    "hanan = persone(\"hanan\", \"atmani\", 2002)\n",
+    "print(hanan.age())\n",
+    "fatima = persone(\"fatma\", \"oulhaj\", 1990)\n",
+    "print(fatima.lastname)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c12f0e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d62db396",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -48,7 +87,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
