--- a/day03/assignments/MutliTreading.ipynb
+++ b/day03/assignments/MutliTreading.ipynb
@@ -12,32 +12,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "0fb3360f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Thread Thread1: 1\n",
-      "Thread Thread1: 2\n",
-      "Thread Thread1: 3\n",
-      "Thread Thread1: 4\n",
-      "Thread Thread1: 5\n",
       "Thread Thread2: 1\n",
+      "Thread Thread1: 2\n",
       "Thread Thread2: 2\n",
+      "Thread Thread1: 3\n",
       "Thread Thread2: 3\n",
+      "Thread Thread1: 4\n",
       "Thread Thread2: 4\n",
+      "Thread Thread1: 5\n",
       "Thread Thread2: 5\n"
      ]
     }
    ],
    "source": [
     "import threading\n",
+    "from time import sleep\n",
     "\n",
     "def print_number_triding():\n",
     "    for i in range(1, 6):\n",
+    "        sleep(0.4)\n",
     "        print(f\"Thread {threading.current_thread().name}: {i}\")\n",
     "\n",
     "\n",
@@ -50,9 +54,12 @@
     "thread2.start()\n",
     "\n",
     "\n",
-    "thread1.join()\n",
-    "thread2.join()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "T1.join()\n",
+    "T2.join()\n",
     "\n"
    ]
   },
@@ -63,12 +70,12 @@
    "source": [
     "## 2. Thread Synchronization\n",
     "\n",
-    "Modify the program from Exercise 1 to use locks to synchronize the two threads and ensure that they print numbers alternately."
+    "Modify the program from Exercise 1 to use locks to synchronize the two threads and ensure that they print numbers alternately"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "af74ac9c",
    "metadata": {},
    "outputs": [
@@ -76,78 +83,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thread Thread1: 1\n",
-      "Thread Thread1: 2\n",
-      "Thread Thread1: 3\n",
-      "Thread Thread1: 4\n",
-      "Thread Thread1: 5\n",
-      "Thread Thread2: 1\n",
-      "Thread Thread2: 2\n",
-      "Thread Thread2: 3\n",
-      "Thread Thread2: 4\n",
-      "Thread Thread2: 5\n"
+      "Thread Thread-27: 1\n",
+      "Thread Thread-28: 2\n",
+      "Thread Thread-27: 3\n",
+      "Thread Thread-28: 4\n",
+      "Thread Thread-27: 5\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nlock = threading.Lock()\\n\\ndef print_numbers_triding():\\n    with lock:\\n        for i in range(5):\\n            print(f\"Thread {thread_id}: {i}\")\\n            \\n            lock.notify()\\n            \\n            lock.release()\\n            lock.acquire()\\n           \\n\\nthread1 = threading.Thread(target=print_numbers_triding, name=\\'Thread1\\')\\nthread2 = threading.Thread(target=print_numbers_triding, name=\\'Thread2\\')\\n\\n\\nthread1.start()\\nthread2.start()\\n\\n\\nthread1.join()\\nthread2.join()\\n\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "\n",
-    "import threading\n",
-    "lock = threading.Lock()\n",
-    "def print_number_triding():\n",
-    "    with lock :\n",
-    "        for i in range(1, 6):\n",
-    "            print(f\"Thread {threading.current_thread().name}: {i}\")\n",
+    "import threading \n",
+    "my_lock= threading.RLock()\n",
     "\n",
+    "class Ther(threading.Thread):\n",
+    "    i = 0\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        threading.Thread.__init__(self)\n",
+    "        \n",
+    "    def run(self):\n",
+    "        while Ther.i<5:\n",
+    "            with my_lock:\n",
+    "                Ther.i += 1\n",
+    "                print(f\"Thread {threading.current_thread().name}: {Ther.i}\")\n",
+    "            sleep(3)\n",
+    "                \n",
+    "            #for i in range(1, 6):\n",
+    "            #    sleep(0.5)\n",
+    "            #    print(f\"Thread {threading.current_thread().name}: {i}\")\n",
+    "        \n",
+    "T1 = Ther()\n",
+    "T2 = Ther()\n",
     "\n",
-    "thread1 = threading.Thread(target=print_number_triding, name='Thread1')\n",
-    "thread2 = threading.Thread(target=print_number_triding, name='Thread2')\n",
+    "T1.start()\n",
+    "T2.start()\n",
     "\n",
-    "\n",
-    "\n",
-    "thread1.start()\n",
-    "thread2.start()\n",
-    "\n",
-    "\n",
-    "thread1.join()\n",
-    "thread2.join()\n",
-    "'''\n",
-    "\n",
-    "lock = threading.Lock()\n",
-    "\n",
-    "def print_numbers_triding():\n",
-    "    with lock:\n",
-    "        for i in range(5):\n",
-    "            print(f\"Thread {thread_id}: {i}\")\n",
-    "            \n",
-    "            lock.notify()\n",
-    "            \n",
-    "            lock.release()\n",
-    "            lock.acquire()\n",
-    "           \n",
-    "\n",
-    "thread1 = threading.Thread(target=print_numbers_triding, name='Thread1')\n",
-    "thread2 = threading.Thread(target=print_numbers_triding, name='Thread2')\n",
-    "\n",
-    "\n",
-    "thread1.start()\n",
-    "thread2.start()\n",
-    "\n",
-    "\n",
-    "thread1.join()\n",
-    "thread2.join()\n",
-    "\n",
-    "'''"
+    "T1.join()\n",
+    "T2.join()"
    ]
   },
   {
@@ -166,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "0379e5e9",
    "metadata": {},
    "outputs": [
@@ -179,29 +153,45 @@
       "Square of 3: 9\n",
       "Square of 4: 16\n",
       "Square of 5: 25\n",
-      "Main thread exiting\n"
+      "time :15.001776968998456\n",
+      "Square of 1: 1\n",
+      "Square of 2: 4\n",
+      "Square of 3: 9\n",
+      "Square of 4: 16\n",
+      "Square of 5: 25\n",
+      "time :6.002363699997659\n"
      ]
     }
    ],
    "source": [
     "\n",
     "import concurrent.futures\n",
+    "from time import perf_counter\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
     "\n",
     "def calculate_square(number):\n",
     "    result = number ** 2\n",
+    "    sleep(3)\n",
     "    print(f\"Square of {number}: {result}\")\n",
     "    return result\n",
     "\n",
-    "numbers = [1, 2, 3, 4, 5]\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=2) as executor:\n",
-    "    \n",
-    "    futures = [executor.submit(calculate_square, num) for num in numbers]\n",
+    "# approche classique\n",
+    "start = perf_counter()\n",
+    "for i in numbers :\n",
+    "    calculate_square(i)     \n",
+    "print(f'time :{perf_counter()-start}')\n",
     "\n",
+    "# approche parallelisée\n",
+    "t = perf_counter()\n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=3) as executor:\n",
+    "    executor.map(calculate_square, numbers)\n",
+    "    '''\n",
+    "    futures = [executor.submit(calculate_square, num) for num in numbers]\n",
     "    concurrent.futures.wait(futures)\n",
     "    results = [future.result() for future in futures]\n",
-    "\n",
-    "print(\"Main thread exiting\")\n",
-    "\n"
+    "    '''\n",
+    "print(f'time :{perf_counter()-t}')"
    ]
   },
   {
@@ -244,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "d7fd05ee",
    "metadata": {},
    "outputs": [
@@ -252,11 +242,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n",
-      "Hello, World!\n",
-      "Hello, World!\n",
-      "Hello, World!\n",
-      "Hello, World!\n"
+      "Hello, T1 World!, T2\n",
+      "Hello, T1 World!, T2\n",
+      "Hello, T1 World!, T2\n",
+      "Hello, T1 World!, T2\n",
+      "Hello, T1 World!, T2\n"
      ]
     }
    ],
@@ -266,17 +256,17 @@
     "\n",
     "def print_hello():\n",
     "    for _ in range(5):\n",
-    "        print(\"Hello, \", end='')\n",
+    "        print(f\"Hello, {threading.current_thread().name} \", end='')\n",
     "        time.sleep(0.1)\n",
     "\n",
     "def print_world():\n",
     "    for _ in range(5):\n",
-    "        print(\"World!\")\n",
+    "        print(f\"World!, {threading.current_thread().name}\")\n",
     "        time.sleep(0.1)\n",
     "\n",
     "# Create two threads\n",
-    "thread1 = threading.Thread(target=print_hello)\n",
-    "thread2 = threading.Thread(target=print_world)\n",
+    "thread1 = threading.Thread(target=print_hello, name=\"T1\")\n",
+    "thread2 = threading.Thread(target=print_world, name=\"T2\")\n",
     "\n",
     "# Start the threads\n",
     "thread1.start()\n",
