--- a/day03/lessons/multi_threading_in_python/01_first_method.ipynb
+++ b/day03/lessons/multi_threading_in_python/01_first_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2c6ce8d1",
    "metadata": {},
    "outputs": [
@@ -15,13 +15,13 @@
       "One finished.\n",
       "Two started.\n",
       "Two finished.\n",
-      "6.004752055000608\n",
+      "6.001406809999935\n",
       "*** using multi-threading ***\n",
       "One started.\n",
       "Two started.\n",
-      "Two finished.One finished.\n",
-      "\n",
-      "using multi-threading:  3.004886431000159\n"
+      "One finished.\n",
+      "Two finished.\n",
+      "using multi-threading:  3.001686544000222\n"
      ]
     }
    ],
@@ -31,11 +31,11 @@
     "\n",
     "print('*** normal execution ***')\n",
     "\n",
-    "start = perf_counter()\n",
+    "start = perf_counter()# musure le temps de départ\n",
     "\n",
     "def show(name):\n",
     "    print(f'{name} started.')\n",
-    "    sleep(3)\n",
+    "    sleep(3)  #pause de 3s\n",
     "    print(f'{name} finished.')\n",
     "\n",
     "show('One')\n",
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
