--- a/day03/lessons/multi_threading_in_python/02_secode_method.ipynb
+++ b/day03/lessons/multi_threading_in_python/02_secode_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e919d19f",
    "metadata": {},
    "outputs": [
@@ -15,13 +15,13 @@
       "One finished.\n",
       "Two started.\n",
       "Two finished.\n",
-      "6.006473594999989\n",
+      "6.0009742160000314\n",
       "*** using multi-threading ***\n",
       "One started.\n",
       "Two started.\n",
-      "using multi-threading:  0.0038988689993857406\n",
       "One finished.\n",
-      "Two finished.\n"
+      "Two finished.\n",
+      "using multi-threading:  3.0020019019993924\n"
      ]
     }
    ],
@@ -64,8 +64,8 @@
     "t1.start()\n",
     "t2.start()\n",
     "\n",
-    "#t1.join()\n",
-    "#t2.join()\n",
+    "t1.join()\n",
+    "t2.join()\n",
     "\n",
     "end = perf_counter()\n",
     "\n",
@@ -73,6 +73,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a78445",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -91,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
