--- a/day03/lessons/multi_threading_in_python/03_daemon.ipynb
+++ b/day03/lessons/multi_threading_in_python/03_daemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "679dd977",
    "metadata": {},
    "outputs": [
@@ -14,7 +14,17 @@
       "Two started.\n",
       "True\n",
       "True\n",
-      "using multi-threading:  0.0013962230004835874\n"
+      "using multi-threading:  0.001179222001155722\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_31142/3784888120.py:29: DeprecationWarning: isDaemon() is deprecated, get the daemon attribute instead\n",
+      "  print(t1.isDaemon())\n",
+      "/tmp/ipykernel_31142/3784888120.py:30: DeprecationWarning: isDaemon() is deprecated, get the daemon attribute instead\n",
+      "  print(t2.isDaemon())\n"
      ]
     },
     {
@@ -24,6 +34,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/asus/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3534: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     },
     {
@@ -87,6 +105,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04de8239",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5b90210",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
